cmake_minimum_required(VERSION 3.17)
project(Algoritms)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algoritms
        "1st_sem/bubbleSort .cpp"
        "1st_sem/countingSort .cpp"
        1st_sem/FibonacciSearch.cpp
        1st_sem/insertionSort.cpp
        1st_sem/KMP_Algorithm_for_Pattern_Searching.cpp
        "1st_sem/LinearSearch .cpp"
        1st_sem/linkedList.cpp
        1st_sem/Merge_QuickSort.cpp
        1st_sem/queue.cpp
        1st_sem/selectionSort.cpp
        1st_sem/ShakerSort.cpp
        1st_sem/ShellSort.cpp)
